--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,13 +18,12 @@ pipeline {
                 }
             }
         }
-        stage('sonar'){
-            def scannerHome = tool 'sonarScanner';
-             withSonarQubeEnv('sonar') {
-                sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
-            }
-            
-        }
+        stage('SonarQube analysis') {
+    withSonarQubeEnv('sonar') {
+      // requires SonarQube Scanner for Maven 3.2+
+      sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
+    }
+  }
         stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
