--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,11 +19,14 @@ pipeline {
             }
         }
         stage('SonarQube analysis') {
-            withSonarQubeEnv('sonar') {
-          // requires SonarQube Scanner for Maven 3.2+
-            sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
-    }
-  }
+            steps{
+                withSonarQubeEnv('sonar') {
+                // requires SonarQube Scanner for Maven 3.2+
+                sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
+                }
+            }
+        }         
+  
         stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
