--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,9 +20,11 @@ pipeline {
         }
         stage('SonarQube analysis') {
             steps{
-                withSonarQubeEnv('sonar') {
+                //withSonarQubeEnv('sonar') {
                 // requires SonarQube Scanner for Maven 3.2+
-                sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
+                //sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
+                def scannerHome = tool 'sonar-runner';   
+                sh "${scannerHome}/bin/sonar-scanner"
                 }
             }
         }         
