--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -23,9 +23,10 @@ pipeline {
                 //withSonarQubeEnv('sonar') {
                 // requires SonarQube Scanner for Maven 3.2+
                 //sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
-                def scannerHome = tool 'sonar-runner'  
+                def scannerHome = tool 'sonar-runner';  
+                withSonarQubeEnv('sonar') {
                 sh "${scannerHome}/bin/sonar-scanner"
-                //}
+                }
             }
         }         
   
