--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,17 +19,13 @@ pipeline {
             }
         }
         stage('SonarQube analysis') {
-            steps{
-                //withSonarQubeEnv('sonar') {
-                // requires SonarQube Scanner for Maven 3.2+
-                //sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
-                def scannerHome = tool 'sonar-runner' 
-                withSonarQubeEnv('sonar') {
-                sh "${scannerHome}/bin/sonar-scanner"
-                }
-            }
-        }         
-  
+            steps {
+              withSonarQubeEnv('My SonarQube Server') {
+                sh 'mvn clean package sonar:sonar'
+              }
+   
+        } 
+       
         stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
