--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
      
         stage('SonarQube analysis') {
             steps {
-              withSonarQubeEnv('My SonarQube Server') {
+              withSonarQubeEnv('sonar') {
                 sh 'mvn clean package sonar:sonar'
               }
             }
