--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,6 +3,9 @@ pipeline {
     stages {
      
         stage('SonarQube analysis') {
+            agent { 
+                label 'linux'
+            }
             steps {
               withSonarQubeEnv('sonar') {
                 sh 'mvn clean package sonar:sonar'
