--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
      
         stage('SonarQube analysis') {
             agent { 
-                label 'linux'
+                label 'slave'
             }
             steps {
               withSonarQubeEnv('sonar') {
