--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,6 +1,22 @@
 pipeline {
     agent any
     stages {
+        stage('Build') {
+            steps {
+                sh 'mvn -B -DskipTests clean package'
+            }
+        }
+        stage('Test') {
+            steps {
+                sh 'mvn test'
+            }
+            post {
+                always {
+                    junit 'target/surefire-reports/*.xml'
+                }
+            }
+        }
+
      
         stage('SonarQube analysis') {
             agent { 
@@ -12,6 +28,12 @@ pipeline {
               }
             }
         } 
+       stage('Deliver') {
+            steps {
+                sh './jenkins/scripts/deliver.sh'
+            }
+        } 
+       
        
        
     }
